syntax = "proto3";

package position;

option java_multiple_files = true;
option java_package = "common.model.protos";
option java_outer_classname = "PositionStatusProtos";

enum PositionStatusProto {
  UNKNOWN=0;
  HYPOTHETICAL=1; //This trade may never happen
  INTENDED=2; //This trade is expected to happen, but hasn't been executed yet
  EXECUTED=3; //Beneficial ownership changes related to this transaction are now legally binding
}
